--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -2,6 +2,12 @@ $primary-font-family: 'Roboto', sans-serif;
 $h1-3-font-family: 'Montserrat', sans-serif;
 $h2-4-font-family: 'Kaushan Script', cursive;
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
   overflow-x: hidden;
@@ -10,7 +16,7 @@ html {
 body {
   font-family: $primary-font-family;
   font-size: 1.6rem;
-  padding: 0.5em;
+  position: relative;
 }
 
 h1,
