--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,4 @@
 @import 'base/_local-reset.scss';
 @import 'base/_typography.scss';
+@import 'layout/header.scss';
 @import 'layout/navigation.scss';
