--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,1 +1,9 @@
-ECHO is on.
+@mixin head-loading-bar($width, $back-color) {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: $width;
+  height: 2px;
+  background-color: $back-color;
+}
