--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,3 +1,5 @@
+@import '_variables.scss';
+
 $primary-font-family: 'Roboto', sans-serif;
 $h1-3-font-family: 'Montserrat', sans-serif;
 $h2-4-font-family: 'Kaushan Script', cursive;
@@ -31,12 +33,27 @@ h4 {
 }
 
 h1 {
+  position: relative;
   font-size: 5rem;
   line-height: 4.6rem;
+  text-align: center;
+  padding-bottom: 0.8em;
+}
+
+h1::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1em;
+  height: 0.04em;
+  background-color: $basic-white;
 }
 
 h2 {
   font-size: 2.4rem;
+  text-align: center;
 }
 
 h3 {
