--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -1,4 +1,67 @@
+@import '../base/_variables.scss';
+@import '../base/_typography.scss';
+@import '../base/_mixins.scss';
+
 header {
   position: relative;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.banner {
+  color: $basic-white;
+  display: grid;
+  gap: 1.5em;
+  z-index: 0;
+  button {
+    color: $basic-white;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    background-color: transparent;
+    justify-self: center;
+    margin-top: 1em;
+    border: 2px solid $basic-white;
+    padding: 0.3em 1.5em;
+  }
+}
+
+.menu-shadow {
+  position: absolute;
+  bottom: 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 1em;
+  width: 80%;
+  span {
+    position: relative;
+    font-family: $primary-font-family;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: $basic-white;
+    padding-top: 1em;
+    &::before {
+      @include head-loading-bar(90%, $basic-white);
+    }
+    &:first-child::before {
+      background-color: $basic-white;
+    }
+    &:first-child::after {
+      @include head-loading-bar(30%, $basic-peachy);
+    }
+  }
 }
