Final mobile main-content layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,7 @@
 @import 'base/_local-reset.scss';
 @import 'base/_typography.scss';
 @import 'base/_mixins.scss';
+@import 'base/_variables.scss';
 @import 'layout/header.scss';
 @import 'layout/navigation.scss';
+@import 'layout/main-content.scss';
