Finish numbers mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,3 +5,4 @@
 @import 'layout/header.scss';
 @import 'layout/navigation.scss';
 @import 'layout/main-content.scss';
+@import 'layout/numbers.scss';
