--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -3,3 +3,4 @@ $basic-peachy: rgb(233, 131, 131);
 $basic-yellow: rgb(242, 218, 138);
 $main-gradient: linear-gradient(($basic-peachy, $basic-yellow));
 $basic-white: #ffffff;
+$minty: #95e1d3;
