Finish services mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,3 +6,4 @@
 @import 'layout/navigation.scss';
 @import 'layout/main-content.scss';
 @import 'layout/numbers.scss';
+@import 'layout/services.scss';
