--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,3 +9,4 @@
 @import 'layout/services.scss';
 @import 'layout/design.scss';
 @import 'layout/we-do.scss';
+@import 'layout/testimonials-inline.scss';
