--- a/scss/layout/we-do.scss
+++ b/scss/layout/we-do.scss
@@ -48,12 +48,23 @@
         margin-left: 0.5em;
       }
       &__arrow {
+        position: relative;
         grid-column: 3/4;
         grid-row: 1/2;
         justify-self: center;
-        width: 100%;
+        width: 1.5em;
         height: 100%;
         transform: rotate(180deg);
+        background-color: transparent;
+        border: none;
+        svg {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          width: 100%;
+          height: 100%;
+        }
       }
       &__des {
         grid-column: 1/3;
