Finish team mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,3 +10,4 @@
 @import 'layout/design.scss';
 @import 'layout/we-do.scss';
 @import 'layout/testimonials-inline.scss';
+@import 'layout/team.scss';
