--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -34,6 +34,32 @@
   text-align: center;
 }
 
+@mixin img-overlay {
+  transform: translate(-0.5em, -0.5em);
+  box-shadow: 0.5em 0.5em 0px 0px $minty;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(
+      rgba(233, 131, 131, 0.8),
+      rgba(242, 218, 138, 0.8)
+    );
+    z-index: 1;
+  }
+}
+
+@mixin img-info-position {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
 @mixin arrow-position($rotate) {
   position: relative;
   justify-self: center;
