--- a/scss/layout/main-content.scss
+++ b/scss/layout/main-content.scss
@@ -25,36 +25,18 @@
         cursor: pointer;
       }
       .main__imgs__pic__info {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include img-info-position;
         text-align: center;
         color: $basic-white;
         text-transform: uppercase;
         z-index: 3;
-        display: none;
       }
       .show {
         display: block;
       }
     }
     &--focus {
-      transform: translate(-0.5em, -0.5em);
-      box-shadow: 0.5em 0.5em 0px 0px $minty;
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background: linear-gradient(
-          rgba(233, 131, 131, 0.8),
-          rgba(242, 218, 138, 0.8)
-        );
-        z-index: 1;
-      }
+      @include img-overlay;
     }
   }
 }
