Finish barbers & projects mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -11,3 +11,5 @@
 @import 'layout/we-do.scss';
 @import 'layout/testimonials-inline.scss';
 @import 'layout/team.scss';
+@import 'layout/barbers.scss';
+@import 'layout/projects.scss';
