Finish testimonials-grid mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -13,3 +13,4 @@
 @import 'layout/team.scss';
 @import 'layout/barbers.scss';
 @import 'layout/projects.scss';
+@import 'layout/testimonials-grid.scss';
