Finish blog mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,3 +14,4 @@
 @import 'layout/barbers.scss';
 @import 'layout/projects.scss';
 @import 'layout/testimonials-grid.scss';
+@import 'layout/blog.scss';
