--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,3 +5,4 @@ $main-gradient: linear-gradient(($basic-peachy, $basic-yellow));
 $basic-white: #ffffff;
 $basic-black: #000000;
 $minty: #95e1d3;
+$gray: rgb(212, 212, 212);
