--- a/scss/layout/we-do.scss
+++ b/scss/layout/we-do.scss
@@ -24,7 +24,7 @@
       gap: 0;
       transition: gap ease-in-out 0.5s;
       align-items: center;
-      outline: 1px solid rgb(212, 212, 212);
+      outline: 1px solid $gray;
       outline-offset: 0.7em;
       &::before {
         content: '';
@@ -33,7 +33,7 @@
         left: -0.7em;
         right: -0.7em;
         height: 1px;
-        background-color: rgb(212, 212, 212);
+        background-color: $gray;
         visibility: hidden;
         transition: visibility ease-in-out 0.4s;
       }
