--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -10,15 +10,25 @@ $h2-4-font-family: 'Kaushan Script', cursive;
   box-sizing: border-box;
 }
 
+html,
+body {
+  position: relative;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
 }
 
 body {
   font-family: $primary-font-family;
   font-size: 1.6rem;
-  position: relative;
+  overflow-y: scroll;
 }
 
 h1,
