--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -6,6 +6,7 @@ header {
   margin-bottom: 1em;
   position: relative;
   height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
