Finish info and footer mobile layout

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,3 +16,5 @@
 @import 'layout/testimonials-grid.scss';
 @import 'layout/blog.scss';
 @import 'layout/map.scss';
+@import 'layout/info.scss';
+@import 'layout/footer.scss';
