--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -7,28 +7,20 @@ $h2-4-font-family: 'Kaushan Script', cursive;
 *,
 *:before,
 *:after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-html,
-body {
-  position: relative;
-  margin: 0;
-  border: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
 }
 
 html {
   font-size: 62.5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
   font-family: $primary-font-family;
   font-size: 1.6rem;
   overflow-x: hidden;
+  position: relative;
 }
 
 h1,
@@ -55,6 +47,7 @@ h1::before {
   position: absolute;
   bottom: 0;
   left: 50%;
+  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 1em;
   height: 0.04em;
@@ -72,6 +65,13 @@ h3 {
 
 h4 {
   font-size: 1.6rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 1.5em;
 }
 
 p {
