--- a/scss/layout/navigation.scss
+++ b/scss/layout/navigation.scss
@@ -20,10 +20,11 @@
   background-color: $basic-peachy;
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   padding: 0.5em;
   z-index: 2;
   &__hamburger {
