--- a/scss/layout/testimonials-grid.scss
+++ b/scss/layout/testimonials-grid.scss
@@ -22,17 +22,19 @@
   }
   &__title {
     @include article-title;
+    margin-bottom: 4em;
   }
   &__client {
     margin: auto;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
     line-height: 1.2em;
     display: grid;
-    gap: 1em;
+    gap: 0.2em;
     grid-template-columns: 25% 75%;
     grid-template-rows: 1em 1em minmax(0, 1fr);
     img {
-      max-width: 100%;
+      max-width: 90%;
+      margin-right: 1em;
       border-radius: 50%;
       grid-column: 1/2;
       grid-row: 1/4;
@@ -44,12 +46,12 @@
     &__occupation {
       position: relative;
       &::before {
-        @include peach-underline(-1.2em, 0, 0, 4em, 0.15em);
+        @include peach-underline(-1em, 0, 0, 4em, 0.15em);
       }
     }
     :last-child {
       font-size: 1.2rem;
-      margin-top: 1em;
+      margin-top: 1.5em;
       padding-right: 1em;
       overflow-wrap: break-word;
     }
