Clean up css folder

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -2,19 +2,19 @@
 @import 'base/_typography.scss';
 @import 'base/_mixins.scss';
 @import 'base/_variables.scss';
-@import 'layout/header.scss';
-@import 'layout/navigation.scss';
-@import 'layout/main-content.scss';
-@import 'layout/numbers.scss';
-@import 'layout/services.scss';
-@import 'layout/design.scss';
-@import 'layout/we-do.scss';
-@import 'layout/testimonials-inline.scss';
-@import 'layout/team.scss';
-@import 'layout/barbers.scss';
-@import 'layout/projects.scss';
-@import 'layout/testimonials-grid.scss';
-@import 'layout/blog.scss';
-@import 'layout/map.scss';
-@import 'layout/info.scss';
-@import 'layout/footer.scss';
+@import 'layout/_header.scss';
+@import 'layout/_navigation.scss';
+@import 'layout/_main-content.scss';
+@import 'layout/_numbers.scss';
+@import 'layout/_services.scss';
+@import 'layout/_design.scss';
+@import 'layout/_we-do.scss';
+@import 'layout/_testimonials-inline.scss';
+@import 'layout/_team.scss';
+@import 'layout/_barbers.scss';
+@import 'layout/_projects.scss';
+@import 'layout/_testimonials-grid.scss';
+@import 'layout/_blog.scss';
+@import 'layout/_map.scss';
+@import 'layout/_info.scss';
+@import 'layout/_footer.scss';
