--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -17,8 +17,8 @@
 }
 
 .navigation {
-  background-color: $basic-peachy;
-  position: fixed;
+  background-color: transparent;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -27,6 +27,14 @@
   align-items: center;
   padding: 0.5em;
   z-index: 2;
+  max-width: 1150px;
+  margin: auto;
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    grid-template-rows: 1fr;
+    padding: 1em;
+  }
   &__hamburger {
     padding: 0.5em;
     display: inline-block;
@@ -34,6 +42,9 @@
     background-color: transparent;
     margin: 0;
     border: 0;
+    @media (min-width: 768px) {
+      display: none;
+    }
     &__box {
       display: inline-block;
       position: relative;
@@ -98,7 +109,7 @@
     visibility: hidden;
     z-index: 2;
     @media (min-width: 400px) and (orientation: landscape) {
-      top: 7em;
+      top: 100%;
       height: 7.5em;
       flex-direction: row;
       flex-wrap: wrap;
@@ -106,6 +117,20 @@
     }
     @media (min-width: 720px) and (orientation: landscape) {
       justify-content: center;
+    }
+    @media (min-width: 768px) {
+      background: transparent;
+      font-size: 1.5rem;
+      position: relative;
+      top: 0;
+      left: auto;
+      transform: translate(0);
+      width: 100%;
+      height: 4em;
+      padding: 0;
+      justify-content: flex-end;
+      opacity: 1;
+      visibility: visible;
     }
     &.show {
       opacity: 1;
@@ -119,21 +144,32 @@
       padding: 0.2em 2em;
       background-color: transparent;
       border: 0;
+      @media (min-width: 768px) {
+        //PADDING SIĘ NIE ZMIENIA
+        padding: 5em;
+        margin-right: 1.5em;
+      }
       &::before {
         content: '';
         position: absolute;
-        bottom: 0;
+        bottom: -0.2em;
         left: 50%;
         transform: translateX(-50%);
         width: 0;
         height: 0.1em;
         transition: all ease-out 0.3s;
         background-color: rgb(242, 218, 138);
+        @media (min-width: 768px) {
+          bottom: -0.4em;
+        }
       }
       &:hover {
         color: rgb(242, 218, 138);
         &::before {
           width: 45%;
+          @media (min-width: 768px) {
+            width: 80%;
+          }
         }
       }
       @media (min-width: 400px) and (orientation: landscape) {
