--- a/scss/layout/_design.scss
+++ b/scss/layout/_design.scss
@@ -3,11 +3,16 @@
 
 .design {
   position: relative;
-  display: grid;
-  grid-template-columns: 10% repeat(4, 1fr) 10%;
-  grid-template-rows: auto 1fr 1.5em;
-  padding-top: 2em;
-  margin: 0 auto 2em;
+  display: flex;
+  flex-direction: column;
+  padding-top: 3em;
+  margin: 2em auto 0;
+  @media (min-width: 600px) {
+    margin-top: 5em;
+  }
+  @media (min-width: 1137px) {
+    margin-top: 9em;
+  }
   &__title {
     @include article-title;
     grid-column: 1/7;
@@ -21,16 +26,25 @@
     object-fit: cover;
     z-index: -1;
   }
-  &__tablet {
-    width: 70%;
-    grid-column: 2/6;
-    grid-row: 2/3;
-  }
-  &__phone {
-    width: 60%;
-    grid-column: 4/6;
-    grid-row: 2/4;
-    justify-self: center;
-    align-self: end;
+  &__devices {
+    width: 100%;
+    max-width: 570px;
+    margin: auto;
+    padding: 0 2em;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto 1fr 1.5em;
+    &__tablet {
+      width: 100%;
+      grid-column: 1/5;
+      grid-row: 2/3;
+    }
+    &__phone {
+      width: 80%;
+      grid-column: 4/6;
+      grid-row: 2/4;
+      justify-self: center;
+      align-self: end;
+    }
   }
 }
