--- a/scss/layout/_main-content.scss
+++ b/scss/layout/_main-content.scss
@@ -2,26 +2,44 @@
 @import '../base/_mixins.scss';
 
 .main {
-  padding: 1em;
+  @include article-margin;
+  padding: 0 1em;
+  max-width: 1210px;
+  margin: auto;
+  margin-top: 2em;
   &__title {
     @include article-title;
   }
   &__description {
     @include article-description;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    @media (min-width: 1137px) {
+      margin-bottom: 6em;
+    }
   }
   &__imgs {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (min-width: 1137px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
     .main__imgs__pic {
       position: relative;
-      width: 100%;
+      width: 90%;
       max-width: 23em;
       margin: 0 auto 1.5em;
       transition: transform ease-in-out 0.2s, box-shadow ease-in-out 0.2s;
+      @media (min-width: 1137px) {
+        margin-bottom: 0;
+      }
       img {
         position: relative;
         width: 100%;
+        max-width: 380px;
         cursor: pointer;
       }
       .main__imgs__pic__info {
