--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -2,25 +2,53 @@
 @import '../base/_variables.scss';
 
 .services {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2em;
+  margin: auto;
+  @include article-margin;
+  display: grid;
+  justify-content: center;
+  max-width: 1150px;
+  @media (min-width: 798px) {
+    grid-template-columns: repeat(2, 350px);
+    gap: 3em;
+  }
+  @media (min-width: 1120px) {
+    grid-template-columns: repeat(3, 350px);
+    gap: 1em;
+  }
   &__title {
     @include article-title;
+    @media (min-width: 798px) {
+      grid-column: 1/3;
+    }
+    @media (min-width: 1120px) {
+      grid-column: 1/4;
+    }
   }
   &__element {
     display: grid;
     grid-template-columns: 3em 1fr;
     grid-template-rows: 1fr 1fr;
     width: 80%;
-    max-width: 20em;
     padding: 2em 0;
     margin: auto;
     border-bottom: 1px solid $basic-black;
+    @media (min-width: 798px) {
+      padding: 0;
+      border-bottom: none;
+      width: 100%;
+    }
+    @media (min-width: 1120px) {
+      &--margin {
+        margin-bottom: 4em;
+      }
+    }
     svg {
       grid-column: 1/2;
       grid-row: 1/3;
       margin-top: 1em;
+    }
+    p {
+      line-height: 1.9rem;
     }
     :nth-child(2) {
       grid-column: 2/3;
