--- a/scss/layout/_we-do.scss
+++ b/scss/layout/_we-do.scss
@@ -2,83 +2,89 @@
 @import '../base/_variables.scss';
 
 .we-do {
-  padding: 1em;
+  margin: auto;
+  @include article-margin;
+  padding: 1em 1em 0;
+  max-width: 1200px;
+  display: grid;
+  @media (min-width: 1200px) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    align-items: center;
+  }
   &__title {
     @include article-title;
+    @media (min-width: 1200px) {
+      grid-column: 1/3;
+    }
   }
   &__description {
     @include article-description;
+    @media (min-width: 1200px) {
+      grid-column: 1/3;
+    }
+  }
+  img {
+    display: block;
+    width: 100%;
+    max-width: 480px;
+    margin: auto;
+    margin-bottom: 2em;
+    @media (min-width: 1200px) {
+      grid-column: 1/2;
+      margin-bottom: 0;
+      max-width: 100%;
+      height: 100%;
+    }
   }
   &__info {
-    img {
-      width: 100%;
-      margin-bottom: 2em;
+    width: 100%;
+    max-width: 480px;
+    height: 24em;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    @media (min-width: 1200px) {
+      grid-column: 2/3;
+      max-width: 100%;
     }
-    &__element {
+    :last-child {
+      margin-bottom: 0;
+    }
+    &__block {
       position: relative;
-      width: 90%;
-      margin: 0 auto 2em;
-      display: grid;
-      grid-template-columns: 2em 1fr 10%;
-      grid-template-rows: 1fr auto;
-      gap: 0;
-      transition: gap ease-in-out 0.5s;
+      display: flex;
       align-items: center;
-      outline: 1px solid $gray;
-      outline-offset: 0.7em;
-      &::before {
-        content: '';
-        position: absolute;
-        top: 2.5em;
-        left: -0.7em;
-        right: -0.7em;
-        height: 1px;
-        background-color: $gray;
-        visibility: hidden;
-        transition: visibility ease-in-out 0.4s;
-      }
+      padding: 0.8em;
+      border: solid 1px $gray;
+      margin-bottom: 1em;
+      transition: margin-bottom 0.5s ease-in-out;
       &__icon {
-        padding: 0;
-        grid-column: 1/2;
-        grid-row: 1/2;
-      }
-      &__title {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        margin-left: 0.5em;
+        margin-right: 0.5em;
       }
       &__arrow {
-        position: relative;
-        grid-column: 3/4;
-        grid-row: 1/2;
-        justify-self: center;
-        width: 1.5em;
-        height: 100%;
-        transform: rotate(180deg);
+        margin-left: auto;
         background-color: transparent;
         border: none;
-        svg {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          width: 100%;
-          height: 100%;
-        }
+        transform: rotate(180deg);
       }
       &__des {
-        grid-column: 1/3;
-        grid-row: 2/3;
+        line-height: 2rem;
+        position: absolute;
+        top: 3.5em;
+        left: 0;
+        width: 100%;
+        padding: 0;
         height: 0;
-        visibility: hidden;
-        margin-top: 0.5em;
-        align-self: start;
         overflow-y: scroll;
-        transition: height ease-in-out 0.5s, visibility ease-in-out 0.5s;
+        border: 1px solid $gray;
+        transition: height 0.5s ease-in-out, padding 0.5s ease-in-out;
       }
     }
     .js-open {
-      gap: 0.6em;
+      margin-bottom: 12em;
+      transition: margin-bottom 0.5s ease-in-out;
       &::before {
         visibility: visible;
       }
@@ -86,8 +92,8 @@
         transform: rotate(0);
       }
       &__des {
-        visibility: visible;
-        height: 7em;
+        height: 11em;
+        padding: 0.5em 1em;
       }
     }
   }
