Finish testimonials-inline all devices layout

--- a/scss/layout/_numbers.scss
+++ b/scss/layout/_numbers.scss
@@ -30,7 +30,7 @@
     text-transform: uppercase;
     background-color: $minty;
     @media (min-width: 650px) {
-      height: 12eme;
+      height: 12em;
       border-right: 1px solid $basic-white;
     }
     span {
