--- a/scss/layout/_testimonials-inline.scss
+++ b/scss/layout/_testimonials-inline.scss
@@ -2,25 +2,38 @@
 @import '../base/_variables.scss';
 
 .testimonials-inline {
+  @include article-margin;
   padding: 1em;
-  margin-bottom: 2em;
   display: grid;
   grid-template-columns: 5% 1fr 2fr 5%;
   grid-template-rows: 1fr auto;
   gap: 0.5em;
   align-items: center;
   background-color: #f3f3f3;
+  @media (min-width: 678px) {
+    grid-template-columns: 1fr 1em 6em auto 1em 1fr;
+    column-gap: 3em;
+    height: 12em;
+  }
+  @media (min-width: 1165px) {
+    grid-template-columns: 1fr 3em 10em 40em 3em 1fr;
+  }
   &__icon {
     grid-column: 2/3;
-    grid-row: 1/3;
     width: 50%;
     height: 50%;
     max-width: 3em;
     max-height: 3em;
-    justify-self: end;
-    margin-right: 30%;
+    justify-self: center;
     outline: 0.15em solid rgb(149, 225, 211);
     outline-offset: 1em;
+    @media (min-width: 678px) {
+      grid-column: 3/4;
+    }
+    @media (min-width: 1165px) {
+      max-width: 5em;
+      max-height: 5em;
+    }
   }
   img {
     width: 100%;
@@ -30,16 +43,24 @@
     margin-top: 1.5em;
   }
   &__opinion {
-    grid-column: 3/4;
-    grid-row: 1/2;
+    line-height: initial;
     margin-bottom: 1em;
+    font-style: italic;
+    @media (min-width: 678px) {
+      line-height: 2.5rem;
+      margin-bottom: 1em;
+    }
+    @media (min-width: 1165px) {
+      font-size: 2rem;
+    }
   }
   &__name {
-    grid-column: 3/4;
-    grid-row: 2/3;
     position: relative;
     font-family: $h2-4-font-family;
     margin-left: 3em;
+    @media (min-width: 1165px) {
+      font-size: 2rem;
+    }
     &::before {
       content: '';
       position: absolute;
@@ -55,10 +76,16 @@
     grid-column: 1/2;
     grid-row: 1/3;
     @include arrow-position(-90deg);
+    @media (min-width: 678px) {
+      grid-column: 2/3;
+    }
   }
   &__arrow-right {
     grid-column: 4/5;
     grid-row: 1/3;
     @include arrow-position(90deg);
+    @media (min-width: 678px) {
+      grid-column: 5/6;
+    }
   }
 }
