--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -43,6 +43,8 @@
 
 @mixin article-description {
   padding: 0 0.5em;
+  max-width: 960px;
+  margin: auto;
   margin-bottom: 3em;
   line-height: 1.5em;
   text-align: center;
