--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -2,6 +2,7 @@
 @import '../base/_variables.scss';
 
 .projects {
+  @include article-margin;
   margin-bottom: 2em;
   &__title {
     @include article-title;
@@ -9,13 +10,35 @@
   &__description {
     @include article-description;
     padding: 0 2em;
+    @media (min-width: 500px) {
+      margin-bottom: 5em;
+    }
+    @media (min-width: 990px) {
+      margin-bottom: 7em;
+    }
   }
   &__gallery {
     display: grid;
+    @media (min-width: 500px) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, auto);
+    }
+    @media (min-width: 990px) {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, auto);
+    }
+    :nth-child(3) {
+      grid-row: 2/4;
+      @media (min-width: 990px) {
+        grid-column: 3/4;
+        grid-row: 1/3;
+      }
+    }
     &__img {
       position: relative;
       img {
         width: 100%;
+        height: 100%;
       }
       &:hover {
         @include img-overlay;
