Finish 2nd testimonials-inline all devices layout

--- a/scss/layout/_testimonials-inline.scss
+++ b/scss/layout/_testimonials-inline.scss
@@ -39,8 +39,12 @@
     width: 100%;
     max-width: 8em;
     border-radius: 50%;
+    justify-self: center;
     align-self: center;
-    margin-top: 1.5em;
+    @media (min-width: 678px) {
+      grid-column: 3/4;
+      max-width: 10em;
+    }
   }
   &__opinion {
     line-height: initial;
