--- a/scss/layout/_testimonials-grid.scss
+++ b/scss/layout/_testimonials-grid.scss
@@ -2,10 +2,29 @@
 @import '../base/_variables.scss';
 
 .testimonials-grid {
+  @include article-margin;
   position: relative;
-  padding: 2em 1em;
-  margin-bottom: 2em;
+  padding: 4em 2em;
   display: grid;
+  @media (min-width: 720px) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3em;
+  }
+  @media (min-width: 900px) {
+    padding-top: 6em;
+    padding-bottom: 6em;
+    column-gap: 6em;
+    :nth-child(3),
+    :nth-child(4) {
+      margin-bottom: 2em;
+    }
+  }
+  @media (min-width: 1130px) {
+    padding-bottom: 7em;
+    grid-template-columns: 1fr repeat(2, auto) 1fr;
+    grid-template-rows: repeat(3, 10em);
+    row-gap: 0;
+  }
   &__hero {
     position: absolute;
     top: 0;
@@ -22,19 +41,48 @@
   }
   &__title {
     @include article-title;
-    margin-bottom: 4em;
+    margin-bottom: 7em;
+    @media (min-width: 720px) {
+      grid-column: 1/3;
+    }
+    @media (min-width: 1130px) {
+      grid-column: 1/5;
+    }
   }
   &__client {
+    max-width: 32em;
     margin: auto;
     margin-bottom: 3em;
     line-height: 1.2em;
+    align-self: center;
     display: grid;
-    gap: 0.2em;
+    column-gap: 1em;
+    row-gap: 0.5em;
     grid-template-columns: 25% 75%;
     grid-template-rows: 1em 1em minmax(0, 1fr);
+    @media (min-width: 720px) {
+      margin-bottom: 0;
+    }
+    @media (min-width: 1130px) {
+      &--c2r2 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+      }
+      &--c3r2 {
+        grid-column: 3/4;
+        grid-row: 2/3;
+      }
+      &--c2r3 {
+        grid-column: 2/3;
+        grid-row: 3/4;
+      }
+      &--c3r3 {
+        grid-column: 3/4;
+        grid-row: 3/4;
+      }
+    }
     img {
-      max-width: 90%;
-      margin-right: 1em;
+      max-width: 70%;
       border-radius: 50%;
       grid-column: 1/2;
       grid-row: 1/4;
@@ -47,6 +95,9 @@
       position: relative;
       &::before {
         @include peach-underline(-1em, 0, 0, 4em, 0.15em);
+        @media (min-width: 900px) {
+          @include peach-underline(-2em, 0, 0, 4em, 0.15em);
+        }
       }
     }
     :last-child {
