--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @mixin head-loading-bar($width, $back-color) {
   content: '';
   position: absolute;
