--- a/scss/layout/_info.scss
+++ b/scss/layout/_info.scss
@@ -1,25 +1,57 @@
 @import '../base/_variables.scss';
 
 .info {
+  margin: auto;
+  @include article-margin;
   display: grid;
   width: 80%;
-  margin: auto;
   padding-bottom: 2em;
   border-bottom: 1px solid $gray;
+  @media (min-width: 800px) {
+    width: 100%;
+    max-width: 700px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4em;
+  }
+  @media (min-width: 1110px) {
+    max-width: 1200px;
+    padding-left: 1em;
+    padding-right: 1em;
+    grid-template-columns: 1.8fr 1.4fr 1fr;
+    align-content: start;
+    gap: 3em;
+  }
   &__company {
+    max-width: 480px;
     color: $gray;
     margin-bottom: 3em;
     display: grid;
-    line-height: 1.2em;
-    h2 {
+    @media (min-width: 800px) {
+      grid-column: 1/3;
+      margin-bottom: 0;
+    }
+    @media (min-width: 1110px) {
+      grid-column: 1/2;
+      margin-bottom: 0;
+    }
+    span {
+      font-size: 4rem;
       font-family: $h1-3-font-family;
       text-align: left;
       margin-bottom: 1em;
+      @media (min-width: 1110px) {
+        margin-bottom: 0;
+      }
     }
     &__description {
       margin-bottom: 2em;
+      line-height: 1.4em;
+      @media (min-width: 1110px) {
+        margin-bottom: 0;
+      }
     }
     &__followers {
+      display: inline-block;
       color: $basic-black;
       padding-bottom: 1em;
       border-bottom: 1px solid $gray;
@@ -58,6 +90,9 @@
       margin-bottom: 1em;
       border: 1px solid $gray;
       color: $gray;
+      @media (min-width: 800px) {
+        margin-bottom: 0;
+      }
     }
     button {
       text-transform: uppercase;
@@ -75,8 +110,17 @@
     }
   }
   &__blogs {
+    max-width: 480px;
+    margin-right: auto;
     margin-bottom: 3em;
     display: grid;
+    @media (min-width: 800px) {
+      grid-column: 1/2;
+    }
+    @media (min-width: 1110px) {
+      grid-column: 2/3;
+      width: 100%;
+    }
     &__post {
       display: grid;
       grid-template-columns: 0.4fr 1fr;
@@ -104,7 +148,12 @@
     }
   }
   &__insta {
+    margin-right: auto;
     cursor: pointer;
+    @media (min-width: 800px) {
+      margin: initial;
+      max-width: 270px;
+    }
     &__imgs {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
