--- a/scss/layout/_map.scss
+++ b/scss/layout/_map.scss
@@ -2,8 +2,8 @@
 @import '../base/_variables.scss';
 
 .map {
+  @include article-margin;
   position: relative;
-  margin: 3em 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
