--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,6 +9,13 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 430px;
+  @media (min-width: 900px) {
+    min-height: 520px1;
+  }
+  @media (min-width: 1199px) {
+    min-height: 630px;
+  }
 }
 
 .hero {
@@ -42,7 +49,7 @@ header {
     @media (min-width: 768px) {
       font-size: 1.5rem;
     }
-    @media (min-width: 1449px) {
+    @media (min-width: 1199px) {
       font-size: 1.7rem;
       padding: 0.3em 1.7em;
     }
