--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,31 +1,22 @@
 @import '../base/_variables.scss';
 @import '../base/_mixins.scss';
 
-$hamburger-menu-size: 4em;
-$hamburger-menu-border-radius: 0.5em;
-$hamburger-menu-bg-color: #0000007a;
-$hamburger-menu-line-height: 2px;
-$hover-line-height: $hamburger-menu-line-height;
-$content-bg-color: darken($basic-peachy, 10%);
-$main-color: #fefefe;
-$hover-color: $basic-yellow;
-$anim-duration: 0.4s;
-
-a,
-a:visited,
-a:hover,
-a:active {
-  color: inherit;
-  text-decoration: none;
-}
-
 .outer-menu {
   position: fixed;
-  top: 5vh;
+  bottom: 10vh;
   right: 0;
   z-index: 1;
   width: 4em;
   height: 4em;
+  @media (min-width: 768px) {
+    position: absolute;
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    height: auto;
+    top: 0;
+    left: 0;
+  }
 
   .checkbox-toggle {
     position: absolute;
@@ -36,6 +27,9 @@ a:active {
     width: $hamburger-menu-size;
     height: $hamburger-menu-size;
     opacity: 0;
+    @media (min-width: 768px) {
+      display: none;
+    }
 
     &:checked {
       & + .hamburger {
@@ -88,6 +82,9 @@ a:active {
       $hamburger-menu-border-radius;
     cursor: pointer;
     @include flex-center;
+    @media (min-width: 768px) {
+      display: none;
+    }
 
     > div {
       position: relative;
@@ -125,6 +122,17 @@ a:active {
     visibility: hidden;
     overflow: hidden;
     @include flex-center;
+    @media (min-width: 768px) {
+      position: relative;
+      visibility: visible;
+      z-index: 999;
+      height: auto;
+      width: 45%;
+      margin-left: auto;
+      left: unset;
+      top: 2em;
+      right: 1em;
+    }
 
     > div {
       width: 300vw;
@@ -137,6 +145,15 @@ a:active {
       transform: scale(0);
       overflow: hidden;
       @include flex-center;
+      @media (min-width: 768px) {
+        flex: unset;
+        transition: none;
+        transform: scale(1);
+        pointer-events: auto;
+        height: auto;
+        border-radius: 0;
+        background-color: transparent;
+      }
 
       > div {
         text-align: center;
@@ -147,6 +164,11 @@ a:active {
         overflow-y: auto;
         flex: none;
         @include flex-center;
+        @media (min-width: 768px) {
+          transition: none;
+          opacity: 1;
+          width: 100%;
+        }
 
         > ul {
           list-style: none;
@@ -154,13 +176,24 @@ a:active {
           margin: 0;
           display: block;
           max-height: 100vh;
+          @media (min-width: 768px) {
+            width: 100%;
+            height: 2em;
+            padding: 0;
+            display: flex;
+            justify-content: space-between;
+          }
 
           > li {
             padding: 0.5em 1em;
             margin: 1em;
-            font-size: 24px;
             display: block;
-
+            font-size: 2.5rem;
+            @media (min-width: 768px) {
+              font-size: 1.8rem;
+              padding: 0 0;
+              margin: 0;
+            }
             > a {
               position: relative;
               display: inline;
